# Example-streams-subscriber

./: Cargo.toml  config.json
src/: main.rs
src/streams_subscriber/: subscriber.rs
