[package]
name = "streams-example-subscriber"
version = "0.1.0"
authors = ["AleBuser <alebuser.98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "local"
path = "src/lib.rs"

[dependencies]
futures = "0.3.16"
failure = "0.1.7"
anyhow = { version = "1.0", default-features = false }
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "v1.2.0" }
serde = {version="1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
tokio = {version = "1.8.2", features = ["full"]}
rand = "0.7.3"
base64 = "^0.12"